# hedens-game-of-decay

./: .gitignore  .travis.yml  LICENSE.md  Makefile  Makefile.in  README.md  configure  configure.ac
include/: game-of-decay.h
src/: Makefile.in  game-library.c  game-of-decay.c
test/: Makefile.in  test.c
