AC_PREREQ([2.69])
AC_INIT([game-of-decay], [0.0.0], [b.heden@gmail.com])

AC_PROG_CC

AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([getopt.h])
AC_CHECK_HEADERS([time.h])
AC_CHECK_HEADERS([unistd.h])

AC_TYPE_SIZE_T

AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([snprintf])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

AC_OUTPUT
